<resources>
    <string name="app_name">Assignment 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ratings">Ratings</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="descripton">Description</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="name_icon">Name icon</string>
    <string name="loaction_icon">Location icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="description_icon">Description Icon</string>
    <string name="add_new_restaurant">Add New Restaurant</string>
    <string name="add_restaurant_data">Add Restaurant Data</string>
    <string name="resutaurant_name">Resutaurant Name</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="rating">Rating</string>
</resources>