<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewRestaurant"
    android:orientation="vertical"
    android:paddingTop="28dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_restaurant_data"
        android:textSize="36sp"
        android:gravity="center"
        android:textStyle="italic|bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:hint="@string/restaurant_name"
        android:id="@+id/addNewRestaurantName"
        android:textSize="22sp"
        android:inputType="text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:hint="@string/location"
        android:id="@+id/addNewLocation"
        android:textSize="22sp"
        android:inputType="text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:hint="@string/phone"
        android:id="@+id/addNewPhone"
        android:textSize="22sp"
        android:inputType="number"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:hint="@string/descripton"
        android:id="@+id/addNewDescription"
        android:textSize="22sp"
        android:inputType="text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:hint="@string/rating"
        android:id="@+id/addRating"
        android:textSize="22sp"
        android:inputType="number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="18dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="22sp"
            android:layout_weight="5"
            tools:ignore="ButtonStyle"
            android:id="@+id/btnAdd"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="22sp"
            android:layout_weight="5"
            tools:ignore="ButtonStyle"
            android:id="@+id/btnExit"/>
    </LinearLayout>
</LinearLayout>